# system-design

./: .gitignore  Makefile  README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md  performance_design.md
architecture/: readme.md
docs/: auth-service.yaml  delivery-service.yaml  user-service.yaml
lab2/services/: README.md  docker-compose.yaml  userver-create-service.sh
lab2/services/auth-service/: CMakeLists.txt
lab2/services/auth-service/.devcontainer/: devcontainer.json
lab2/services/auth-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab2/services/auth-service/src/: main.cpp
lab2/services/auth-service/src/handlers/: login_handler.cpp  register_handler.cpp  register_handler.hpp  validate_handler.hpp
lab2/services/auth-service/src/storage/: credential_storage.cpp  credential_storage.hpp
lab2/services/auth-service/src/usecase/: auth_usecase.cpp
lab2/services/auth-service/src/utils/: jwt_utils.cpp
lab2/services/auth-service/tests/: conftest.py  test_basic.py
lab2/services/delivery-service/: CMakeLists.txt  Dockerfile
lab2/services/delivery-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab2/services/delivery-service/schemas/: delivery.yaml
lab2/services/delivery-service/src/: main.cpp
lab2/services/delivery-service/tests/: conftest.py  test_basic.py
lab2/services/docs/: delivery-service.yaml  package-service.yaml  user-service.yaml
lab2/services/package-service/: CMakeLists.txt  Dockerfile  Makefile
lab2/services/package-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab2/services/package-service/schemas/: package.yaml
lab2/services/package-service/src/: main.cpp
lab2/services/package-service/tests/: conftest.py
lab2/services/user-service/: CMakeLists.txt  Dockerfile
lab2/services/user-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
lab2/services/user-service/schemas/: user.yaml
lab2/services/user-service/src/: main.cpp
lab_1/: workspace.dsl
mongo/package-service/: data.js  queries.js  schema_design.md  validation.js
nginx/: nginx.conf
postgres/: optimization.md
postgres/auth-service/: data.sql  queries.sql  schema.sql
postgres/delivery-service/: data.sql  queries.sql  schema.sql
postgres/package-service/: data.sql  queries.sql
postgres/user-service/: data.sql  queries.sql
rabbitmq/: secdist.json
redis/: secdist.json  sentinel.conf
services/auth-service/: CMakeLists.txt  Dockerfile
services/auth-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/auth-service/schemas/: auth.yaml
services/auth-service/src/: main.cpp
services/auth-service/tests/: conftest.py
services/delivery-service/: CMakeLists.txt  Makefile  README.md
services/delivery-service/.devcontainer/: devcontainer.json
services/delivery-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/delivery-service/schemas/: delivery.yaml
services/delivery-service/src/: main.cpp
services/delivery-service/tests/: conftest.py  test_basic.py
services/notification-service/: CMakeLists.txt  Dockerfile
services/notification-service/configs/: config_vars.yaml  static_config.yaml
services/notification-service/src/: main.cpp
services/notification-service/src/consumer/: notification_consumer.cpp  notification_consumer.hpp
services/package-service/: CMakeLists.txt  README.md
services/package-service/.devcontainer/: devcontainer.json
services/package-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/package-service/schemas/: package.yaml
services/package-service/src/: main.cpp
services/package-service/tests/: conftest.py  test_basic.py
services/user-service/: CMakeLists.txt  Makefile
services/user-service/.devcontainer/: devcontainer.json
services/user-service/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
services/user-service/schemas/: user.yaml
services/user-service/src/: main.cpp
services/user-service/tests/: conftest.py  test_basic.py
(+51 files in other folders)
